--- a/index.html
+++ b/index.html
@@ -3,26 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sample Deployment</title>
-  <style>
-    body {
-      color: #ffffff;
-      background-color: #8889e1;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-    }
-    
-    h1 {
-      font-size: 500%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-    
-    h2 {
-      font-size: 200%;
-      font-weight: normal;
-      margin-bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="asset/style.css">
 </head>
 <body>
   <div align="center">
