--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>合同会社オンテック</title>
   <link rel="stylesheet" type="text/css" href="asset/style.css">
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations ...</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <h1>合同会社オンテック</h1>
+    <h2>ITコンサル及び、システム開発請負を行っております。</h2>
+    <p>住所：〒133-0051 東京都江戸川区北小岩２－３３－８</p>
+    <p>代表　橋場　範英</p>
   </div>
 </body>
 </html>
